--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -12,7 +12,7 @@ institute:
   - NHM: Department of Research and Collections, Natural History Museum, University of Oslo, Oslo, Norway
 bibliography: invasibility-ms.bib
 output: 
-  bookdown::word_document2:
+  bookdown::html_document2:
     pandoc_args:
       - '--lua-filter=lua-filters/scholarly-metadata.lua'
       - '--lua-filter=lua-filters/author-info-blocks.lua'
@@ -130,9 +130,11 @@ Sustained establishment (includes survival probabilities)
 
 ## Field data
 
-We used observations of wildlings and nature types collected around 63 sexually mature conifer plantations, belonging to four groups of alien species (hereafter: "species").
+We used observations of wildlings and nature types collected around 63 sexually mature conifer plantations, composed of four groups of alien species (hereafter: "species").
 The sample comprised: (1) thirty-six plantations of Sitka spruce (*Picea sitchensis*) or its fertile hybrid, Lutz spruce (*Picea* x *lutzii*), (2) twelve plantations of undetermined larches (*Larix* spp.), (3) nine plantations of Norway spruce (*Picea abies*), and (4) six plantations of lodgepole pine (*Pinus contorta*).
-Note that the plantations of Norway spruce were located in parts of Norway where it not native [fig. \@ref(fig:localities-map); @aarrestadForeignNorwaySpruce2014]. 
+Note that the plantations of Norway spruce were located in parts of Norway where it not native [fig. \@ref(fig:localities-map); @aarrestadForeignNorwaySpruce2014].
+The plantation localities were selected and visited as a part of one of five field campaigns during the period 2016-2019 [reported in @olsenKartleggingAvKortdistansespredning2016; @appelgrenKartleggingAvKortdistansespredning2017; @kyrkjeeideKartleggingAvKortdistansespredning2017; @appelgrenKartleggingAvKortdistansespredning2018;   @olsenKartleggingAvKortdistansespredning2019]
+
 
 ```{r localities-map, fig.cap='Locations across Norway of the 63 plantations in the data set.'}
 knitr::include_graphics('figures/localities-map.pdf')
