WIP: ## field data

--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -104,6 +104,16 @@
   number = {4}
 }
 
+@techreport{brynVeilederKartleggingAv2015,
+  title = {Veileder for Kartlegging Av Terrestrisk Naturvariasjon Etter {{NiN}} 2.0. Veileder Versjon 2.0.0.},
+  author = {Bryn, Anders and Halvorsen, Rune},
+  year = {2015},
+  address = {{Oslo, Norway}},
+  institution = {{Norwegian Biodiversity Information Facility}},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bryn_Halvorsen_2015_Veileder for kartlegging av terrestrisk naturvariasjon etter NiN 2.pdf},
+  keywords = {naturtyper}
+}
+
 @article{buckleySlowingPineInvasion2005,
   title = {Slowing down a Pine Invasion despite Uncertainty in Demography and Dispersal},
   author = {Buckley, Yvonne M. and Brockerhoff, Eckehard and Langer, Lisa and Ledgard, Nicholas and North, Heather and Rees, Mark},
@@ -388,6 +398,17 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Haakenstad and Haugen - 2017 - A 15-year high resolution meteorological dataset f.pdf},
   number = {5/2017},
   type = {{{METreport}}}
+}
+
+@techreport{halvorsenNaturNorgeNiN2015,
+  title = {Natur i {{Norge}} ({{NiN}}). Versjon 2.0.0.},
+  author = {Halvorsen, R and Bryn, A and Erikstad, L and Lindgaard, A},
+  year = {2015},
+  pages = {1--26},
+  address = {{Trondheim}},
+  institution = {{Norwegian Biodiversity Information Facility}},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Halvorsen et al_2015_Natur i Norge.pdf},
+  keywords = {naturtyper}
 }
 
 @article{hewittTreeSeedDispersal2002,
