--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -130,15 +130,22 @@ Sustained establishment (includes survival probabilities)
 
 ## Field data
 
-We used observations of wildlings and nature types collected around 63 sexually mature conifer plantations, composed of four groups of alien species (hereafter: "species").
+We used observations of wildlings and nature types collected around 63 sexually mature conifer plantations, composed of four alien species groups (hereafter: "species").
 The sample comprised: (1) thirty-six plantations of Sitka spruce (*Picea sitchensis*) or its fertile hybrid, Lutz spruce (*Picea* x *lutzii*), (2) twelve plantations of undetermined larches (*Larix* spp.), (3) nine plantations of Norway spruce (*Picea abies*), and (4) six plantations of lodgepole pine (*Pinus contorta*).
-Note that the plantations of Norway spruce were located in parts of Norway where it not native [fig. \@ref(fig:localities-map); @aarrestadForeignNorwaySpruce2014].
-The plantation localities were selected and visited as a part of one of five field campaigns during the period 2016-2019 [reported in @olsenKartleggingAvKortdistansespredning2016; @appelgrenKartleggingAvKortdistansespredning2017; @kyrkjeeideKartleggingAvKortdistansespredning2017; @appelgrenKartleggingAvKortdistansespredning2018;   @olsenKartleggingAvKortdistansespredning2019]
-
+Note that the plantations of Norway spruce were located in parts of Norway where it is not native [fig. \@ref(fig:localities-map); @aarrestadForeignNorwaySpruce2014].
+Plantation localities were selected manually from aerial imagery, aiming for plantations that were isolated from other plantations of the same species.
 
 ```{r localities-map, fig.cap='Locations across Norway of the 63 plantations in the data set.'}
 knitr::include_graphics('figures/localities-map.pdf')
 ```
+
+We collected field data from each plantation in one of five field campaigns during the period 2016-2019 [reported in @olsenKartleggingAvKortdistansespredning2016; @appelgrenKartleggingAvKortdistansespredning2017; @kyrkjeeideKartleggingAvKortdistansespredning2017; @appelgrenKartleggingAvKortdistansespredning2018; @olsenKartleggingAvKortdistansespredning2019].
+Wildlings and nature types were mapped comprehensively within a 500x500 m plot centered around each plantation.
+Specifically, we used GPS to register the point-positions of all wildlings over 30 cm in height, recording a single position for groups of wildlings occurring with less than 5 m between them.
+A few exceptionally dense groups of wildlings were mapped by registering polygons instead of points and estimating the number of individuals by transect counts.
+Concurrently, we registered polygons for all terrestrial nature types following the Nature in Norway classification system (version 2.0 or 2.1), which is the national standard for mapping ecodiversity [@halvorsenNaturNorgeNiN2015].
+The nature types were registered at a scale of 1:5000, which requires identifying all polygons with a size over 250 m^2^ [@brynVeilederKartleggingAv2015].   
+
 
 ## Modeled seed dispersal
 
@@ -157,6 +164,8 @@ knitr::include_graphics('figures/locality-example/locality-example.pdf')
 # Discussion
 
 Advantage to observational study (registering established individuals rather than doing seeding plots) is that seeds experience only natural conditions, and it measures long-term survival --- the quantity of interest for management.
+
+Spatial grain limitations: minimum polygon area NiN, wildling group locations. A good reason to use a relatively course observation units (100 m2) and to perform fuzzy coding of nature types. 
 
 # References
 
