--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -53,6 +53,20 @@
   number = {6}
 }
 
+@article{austinContinuumConceptOrdination1985,
+  title = {Continuum {{Concept}}, {{Ordination Methods}}, and {{Niche Theory}}},
+  author = {Austin, M P},
+  year = {1985},
+  month = nov,
+  volume = {16},
+  pages = {39--61},
+  issn = {0066-4162},
+  doi = {10.1146/annurev.es.16.110185.000351},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Austin - 1985 - Continuum Concept, Ordination Methods, and Niche T.pdf},
+  journal = {Annual Review of Ecology and Systematics},
+  number = {1}
+}
+
 @article{bakkestuenSteplessModelsRegional2008,
   title = {Step-Less Models for Regional Environmental Variation in {{Norway}}},
   author = {Bakkestuen, Vegar and Erikstad, Lars and Halvorsen, Rune},
@@ -576,6 +590,14 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\nathan2012.pdf}
 }
 
+@misc{NatureTypesNorway2018,
+  title = {Nature {{Types}} in {{Norway}} Classification System},
+  year = {2018},
+  howpublished = {https://www.biodiversity.no/Pages/135563/Nature\_Types\_in\_Norway\_classification?Key=88},
+  journal = {Norwegian Biodiversity Information Centre},
+  language = {en}
+}
+
 @techreport{nordbakkenVrifuruPinusContorta2012,
   title = {{Vrifuru Pinus contorta}},
   author = {Nordbakken, J{\o}rn-Frode},
@@ -819,6 +841,18 @@
   journal = {Ecology},
   language = {en},
   number = {7}
+}
+
+@article{whittakerGradientAnalysisVegetation1967,
+  title = {Gradient Analysis of Vegetation},
+  author = {Whittaker, Robert Harding},
+  year = {1967},
+  volume = {42},
+  pages = {207--264},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Whittaker - 1967 - Gradient analysis of vegetation.pdf},
+  isbn = {1469-185X},
+  journal = {Biological Reviews},
+  number = {2}
 }
 
 @article{wickhamWelcomeTidyverse2019,
